Change Firebase Configuration

--- a/contact_us.html
+++ b/contact_us.html
@@ -20,13 +20,7 @@
         <script>
             // Your web app's Firebase configuration
             var firebaseConfig = {
-              apiKey: "AIzaSyDaDTSKHE1S_5QLtda58EsO_fut6_FE86I",
-              authDomain: "new-project-sfscp.firebaseapp.com",
-              databaseURL: "https://new-project-sfscp.firebaseio.com",
-              projectId: "new-project-sfscp",
-              storageBucket: "new-project-sfscp.appspot.com",
-              messagingSenderId: "1054088407544",
-              appId: "1:1054088407544:web:8fe05759ae0735d3660e0d"
+              <------------------Your Firease Configration ------------------------->>>>>>>>
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
